packages/lustre-v6.6.103.3/test/should_fail/polymorphic/overload.lus


type zetype = int^4;

node overplus = map<<+,4>>;

node do_int(x,y: int^4) returns (o: int^4);
let o = overplus(x,y); tel

node do_real(x,y: real^4) returns (o: real^4);
let o = overplus(x,y); tel

node overload = do_real;